--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -33,3 +33,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#phaser-parent {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
