--- a/public/global.css
+++ b/public/global.css
@@ -18,3 +18,13 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	overflow: hidden;
 }
+
+
+@media ( max-width : 800px){
+
+	.work {
+		transform: scale(80%);
+		font-size: 15px !important;
+	}
+
+}
