--- a/public/global.css
+++ b/public/global.css
@@ -41,18 +41,18 @@ body {
 		padding:  5% !important;
 	}
 
-	.left{
+	.popup-left{
 		width: 80px !important;
 		height: 80px !important;
 	}
 
 
 	.link1 {
-		margin-bottom: 30px !important;
+		margin-bottom: 20px !important;
 	}
 
 	.link2 {
-		margin-bottom: 40px !important;
+		margin-bottom: 35px !important;
 	}
 
 	.closebutton {
